update pseudocode in docs

--- a/docs/meetings/2025-10-08.md
+++ b/docs/meetings/2025-10-08.md
@@ -38,7 +38,7 @@ class Agent:
     def top_choice(self):
         return self.preferences[0]
 
-    # do not change during an election to backtrack individual preferences
+    # do not edit during an election to backtrack individual preferences
 
 class Population:
     # default constructor = list of agents
@@ -46,22 +46,38 @@ class Population:
         self.preference_lists = preference_lists
         self.population_matrix = build_matrix(preference_lists)
 
-    # secondary constructor = from a population matrix
+    # second constructor = from a population matrix
     @classmethod
     def from_matrix():
 
-    # third constructor = list of agents, volume vector
+    # third constructor = from list of agents and associated volume vector (default vector of ones)
     @classmethod
     def from_preferences(archetypes: list[Agent], volume_vector: list[int]):
         # check that length(volume_vector) == length(archetypes) 
 
 
+class VotingSystem:
+    def run_election(self, population: Population) -> Candidate:
+
+class PluralityVoting(VotingSystem):
+    def run_election(self, population: Population) -> Candidate:
+
+class BordaCount(VotingSystem):
+    def run_election(self, population: Population) -> Candidate:
+
+# implement other voting systems accordingly
+
+
 class Election:
-    def __init__(self population: Population):
+    def __init__(self, candidates: list[Candidate], population: Population, system: VotingSystem):
+        self.candidates = candidates
+        self.population = population
+        self.system = system
+    
+    # at a later stage, need to deal with VotingSystems that output set of candidates and probability distributions
 
-    @staticmethod
-    def Plurality():
-
-    @staticmethod
-    def Borda():
+    def run(self):
+        winner = self.system.run_election(self.population)
+        print(f"Winner: {winner.name}")
+        return winner
 ```
